# rust_bitcoin_gui

./: Cargo.toml
src/: crypto_price.rs  main.rs
ui/: appwindow.slint
