[package]
name = "rust_bitcoin_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.12.4", features = ["json", "blocking"]}
rust_decimal = "1.35.0"
serde = {version = "1.0.201", features = ["derive"]}
slint = "1.5.1"
tokio = {version = "1.37.0", features = ["full"]}

[build-dependencies]
slint-build = "1.4"
